fixed scroller on ios

--- a/style.css
+++ b/style.css
@@ -578,6 +578,11 @@ body {
   height: 100px;
   object-fit: cover;
   opacity: 0.9;
+  /* Add iOS Safari optimizations */
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
 .scroller__inner {
@@ -604,7 +609,15 @@ body {
   flex-wrap: nowrap;
   animation: scroll var(--_animation-duration, 40s)
     var(--_animation-direction, forwards) linear infinite;
+  /* Add iOS Safari compatibility */
+  -webkit-animation: scroll var(--_animation-duration, 40s)
+    var(--_animation-direction, forwards) linear infinite;
+  will-change: transform;
+  /* Force hardware acceleration on iOS */
+  transform: translateZ(0);
+  -webkit-transform: translateZ(0);
 }
+
 
 .scroller[data-direction="right"] {
   --_animation-direction: reverse;
@@ -616,6 +629,13 @@ body {
 
 @keyframes scroll {
   to {
+    transform: translate(calc(-50% - 0.5rem));
+  }
+}
+
+@-webkit-keyframes scroll {
+  to {
+    -webkit-transform: translate(calc(-50% - 0.5rem));
     transform: translate(calc(-50% - 0.5rem));
   }
 }
